overflow sidebar problem fixed
side bar overflow scroll when needed + sidebar header add plus button only if can add

--- a/src/assets/css/myframework.css
+++ b/src/assets/css/myframework.css
@@ -56,6 +56,8 @@ body {
 
 .sidebar  > div {
     max-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -359,6 +361,11 @@ body {
 }
 
 
-div.members{
+div:has(>.member-item){
     overflow-y : auto;
+}
+
+div:has(.tools) .tools {
+    overflow-y : auto;
+    min-height: 155px;
 }
